@@ -170,7 +170,7 @@ class Theme_Blvd_Compat_bbPress {
 				$classes[] = 'page';
 			}
 
-			if ( is_array($class) && in_array('top', $class) && ( bbp_is_forum_archive() || bbp_is_topic_archive() || bbp_is_single_forum() || bbp_is_single_topic() ) ) {
+			if ( is_array($class) && in_array('top', $class) && themeblvd_get_option('bbp_naked_page') && ( bbp_is_forum_archive() || bbp_is_topic_archive() || bbp_is_single_forum() || bbp_is_single_topic() ) ) {
 				$classes[] = 'tb-naked-page';
 			}
 		}
