@@ -7,6 +7,7 @@ Jump Start Changelog
 * Added ThemeForest update system.
 * Added "Save Options" button to individual sections of Theme Options page.
 * Added "Naked Page" page template, which outputs a standard page without content background.
+* Added option to style bbPress pages like new naked page template, see *Appearance > Theme Options > Plugins > bbPress*.
 * Added theme debug info to output in `<head>` of site, [see here](http://dev.themeblvd.com/tutorial/remove-debug-info).
 * Improved responsive display of Tabs element and `[tabs]` shortcode.
 * Improved thumbnail link hover icons.
